# nexis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  docs-pages.yml  perf-k6.yml  release.yml  rust-clippy.yml
dashboard/control-api/: Dockerfile  drizzle.config.ts  package.json  tsconfig.json
dashboard/control-api/drizzle/: 0000_initial.sql
dashboard/control-api/drizzle/meta/: _journal.json
dashboard/control-api/src/: app.ts  better_auth.ts  db.ts  index.ts  migrate.ts  schema.ts  store.ts  token.ts
dashboard/control-api/tests/: app.test.ts
dashboard/ui/: Dockerfile  package.json
dashboard/ui/src/: index.html  server.ts
docs/: ARCHITECTURE.md  LOAD_TESTING.md  PROTOCOL.md  QUICKSTART.md  SECURITY_REVIEW.md  WASM_PLUGINS.md
docs-site/: package.json
docs-site/app/: layout.jsx  page.jsx
docs-site/content/: _meta.js  index.mdx
docs-site/content/api-reference/: _meta.js  control-api.mdx  message-catalog.mdx  protocol.mdx
docs-site/content/docs/: index.mdx
docs-site/content/docs/api-reference/: control-api.mdx  index.mdx  message-catalog.mdx  protocol.mdx
docs-site/content/docs/getting-started/: authentication.mdx  connect-client.mdx  index.mdx  quickstart.mdx  room-basics.mdx
docs-site/content/docs/guides/: compatibility-and-versioning.mdx  error-reference.mdx  rpc-and-events.mdx
docs-site/content/docs/infrastructure/: observability.mdx  (+3 more)
docs-site/content/getting-started/: _meta.js  authentication.mdx  connect-client.mdx  game-loop.mdx  index.mdx  quickstart.mdx  room-basics.mdx
docs-site/content/guides/: _meta.js  compatibility-and-versioning.mdx  error-reference.mdx  matchmaking.mdx  plugins.mdx  rpc-and-events.mdx  state-sync.mdx
docs-site/content/infrastructure/: _meta.js  operations-runbook.mdx
docs-site/content/sdks/: _meta.js  index.mdx  typescript.mdx
docs-site/content/tutorials/: counter-room.mdx  custom-room-plugin.mdx
docs/fixtures/protocol/: handshake_v1.json  state_patch_v1_with_checksum.json  state_patch_v1_without_checksum.json  state_snapshot_v1.json
examples/test/: index.ts  package.json
examples/wasm-plugins/: README.md
examples/wasm-plugins/counter_rust_plugin/: Cargo.toml
examples/web-demo/: Dockerfile  index.html  package.json  tsconfig.json
examples/web-demo/src/: app.ts
infra/: docker-compose.yml  smoke.ts
infra/load/: compare-k6.mjs  k6-ws.js
plugins/rust/nexis_wasm_plugin/: Cargo.toml
sdks/ts/: .npmignore  .swcrc  README.md  package.json  tsconfig.json
sdks/ts/src/: client.ts  codec.ts  index.ts  patch.ts  rpc.ts  types.ts
sdks/ts/tests/: client_rpc_guard.test.ts  client_state_init.test.ts  codec.test.ts  matchmaking.test.ts  patch.test.ts  room_api.test.ts  rpc.test.ts
server/: Cargo.toml  Dockerfile
server/crates/auth/: Cargo.toml
server/crates/auth/src/: lib.rs
server/crates/codec/: Cargo.toml
server/crates/codec/codec_json/: Cargo.toml
server/crates/codec/codec_json/src/: lib.rs
server/crates/codec/codec_msgpack/: Cargo.toml
server/crates/codec/codec_msgpack/src/: lib.rs
server/crates/codec/src/: lib.rs
server/crates/codec/tests/: codec_roundtrip.rs
server/crates/core/: Cargo.toml
server/crates/core/src/: lib.rs
server/crates/hooks/: Cargo.toml
server/crates/hooks/src/: lib.rs
server/crates/modules/mod_rate_limit/: Cargo.toml
server/crates/modules/mod_rate_limit/src/: lib.rs
server/crates/protocol/: Cargo.toml
server/crates/protocol/src/: lib.rs
server/crates/protocol/tests/: compat_fixtures.rs
server/crates/rooms/: Cargo.toml
server/crates/rooms/src/: lib.rs
server/crates/rpc/: Cargo.toml
server/crates/rpc/src/: lib.rs
server/crates/runtime/: Cargo.toml
server/crates/runtime/src/: data_plane.rs  lib.rs
server/crates/state_sync/: Cargo.toml
server/crates/state_sync/src/: lib.rs
server/crates/transport_ws/: Cargo.toml
server/crates/transport_ws/src/: lib.rs  main.rs
(+7 files in other folders)
