[workspace]
resolver = "2"
members = [
  "crates/runtime",
  "crates/core",
  "crates/transport_ws",
  "crates/rooms",
  "crates/rpc",
  "crates/state_sync",
  "crates/auth",
  "crates/hooks",
  "crates/protocol",
  "crates/codec",
  "crates/codec/codec_json",
  "crates/codec/codec_msgpack",
  "crates/modules/mod_rate_limit"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["TriForMine <quentin@triformine.dev>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rmp-serde = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
wasmtime = "36"
wat = "1"
