[package]
name = "codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol" }
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
codec_json = { path = "codec_json" }
codec_msgpack = { path = "codec_msgpack" }
