[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
auth = { path = "../auth" }
codec = { path = "../codec" }
codec_json = { path = "../codec/codec_json" }
codec_msgpack = { path = "../codec/codec_msgpack" }
chrono.workspace = true
hooks = { path = "../hooks" }
protocol = { path = "../protocol" }
rand.workspace = true
reqwest.workspace = true
rooms = { path = "../rooms" }
state_sync = { path = "../state_sync" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait = "0.1"
wasmtime.workspace = true
wat.workspace = true
