[package]
name = "state_sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true

[dev-dependencies]
codec = { path = "../codec" }
codec_json = { path = "../codec/codec_json" }
codec_msgpack = { path = "../codec/codec_msgpack" }
protocol = { path = "../protocol" }
